MENTORING-5: Добавлены примеры