@@ -1,11 +1,14 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version "2.7.9"
+    id 'org.springframework.boot' version "3.2.5"
     id 'io.spring.dependency-management' version '1.1.5'
 }
 
 group = 'ru.panyukovnn'
 version = '1.0-SNAPSHOT'
+
+java.targetCompatibility = JavaVersion.VERSION_17
+java.sourceCompatibility = JavaVersion.VERSION_17
 
 repositories {
     mavenLocal()
@@ -17,7 +20,7 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-aop"
     implementation "org.springframework.kafka:spring-kafka"
 
-    implementation "io.github.resilience4j:resilience4j-spring-boot2:2.2.0"
+    implementation "io.github.resilience4j:resilience4j-spring-boot3:2.2.0"
     implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
 
     implementation 'org.projectlombok:lombok'
@@ -32,4 +35,5 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
